<resources>
    <string name="header_activities">Aktiviteter</string>
    <string name="create_activity_text">Ny aktivitet</string>
    <string name="activity_button">Lägg till</string>
    <string name="add_activity_title">Ny aktivitet</string>
    <string name="doc_list_title">Dokument</string>
    <string name="app_name">Närvaroappen</string>
    <string name="action_settings">b</string>
    <string-array name="RemoveEdit">{"Ändra namn", "Ta bort aktivitet"}</string-array>
    <string name="changeName">Ändra namn</string>
    <string name="positive_answer_dialog">OK</string>
    <string name="negative_answer_dialog">Avbryt</string>
    <string name="dialog_title">Lägg till ny aktivitet</string>
    <string name="add_doc_dialog_title">Lägg till nytt dokument</string>
    <string name="add_column">Ny kolumn</string>
    <string name="add_person">Ny deltagare</string>
    <string name="drivekey">id=849434417387</string>
    <string name="export_choice">Dela via</string>
    <string name="left_column_name">Namn</string>
    <string name="menu_remove_column">Ta bort kolumn</string>
    <string name="menu_import_names">Importera namn</string>
    <string name="menu_rename_column">Ändra namn på kolumn</string>
    <string name="menu_import_persons_columns">Importera namn och kolumner</string>


</resources>
